--- a/my-first-pipeline/Jenkinsfile
+++ b/my-first-pipeline/Jenkinsfile
@@ -1,9 +1,24 @@
 pipeline {
-  agent {
-    docker { image 'node:16-alpine' }
-  }
+  agent none
   stages {
-    stage('Test') {
+    stage('Back-end') {
+      agent {
+        docker { 
+          image 'maven:3.8.1-adoptopenjdk-11' 
+          reuseNode true  // Keep the container running after the stage
+        }
+      }
+      steps {
+        sh 'mvn --version'
+      }
+    }
+    stage('Front-end') {
+      agent {
+        docker { 
+          image 'node:16-alpine' 
+          reuseNode true  // Keep the container running after the stage
+        }
+      }
       steps {
         sh 'node --version'
       }
